spade-tests/src/snapshots/spade_tests__typeinference__tuple_pattern_mismatch_with_actual_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    let array = (0, 1);
    match array {
        (true, true) => {}
    }
}


error: Expected type (Number<_>, Number<_>), got (bool, bool)
  ┌─ testinput:4:9
  │
4 │         (true, true) => {}
  │         ^^^^^^^^^^^^
  │         ││
  │         │Type bool inferred here
  │         Expected (Number<_>, Number<_>)
  │
  = note: Expected: Number<_>
                in: (Number<_>, Number<_>)
               Got: bool
                in: (bool, bool)
