spade-tests/src/snapshots/spade_tests__typeinference__turbofish_overrides_type.snap
---
source: spade-tests/src/typeinference.rs
---
fn ret_int<#uint N>() -> int<N> {
    0
}

fn test() {
    let x: int<8> = ret_int::<10>();
}


error: Expected type int<8>, got int<10>
  ┌─ testinput:6:21
  │
6 │     let x: int<8> = ret_int::<10>();
  │                -    ^^^^^^^^^^^^^^^
  │                │    │         │
  │                │    │         Type 10 inferred here
  │                │    Expected int<8>
  │                Type 8 inferred here
  │
  = note: Expected: 8
                in: int<8>
               Got: 10
                in: int<10>
